establish/k8s-manifests/deployment-csharp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: sample-csharp-application-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: csharp-application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: csharp-application
        admission.datadoghq.com/enabled: "true"
    spec:
      containers:
        - name: csharp-application-container
          image: @ecr_container_url
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: csharp-application-service
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: csharp-application
