establish/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: sample-application-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: java-microservice
  template:
    metadata:
      annotations:
        admission.datadoghq.com/java-lib.version: "latest"
      labels:
        app.kubernetes.io/name: java-microservice
        admission.datadoghq.com/enabled: "true"
    spec:
      containers:
        - name: java-microservice-container
          image: @ecr_container_url
          ports:
            - containerPort: 38080
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: sample-application-service
spec:
  ports:
    - port: 80
      targetPort: 38080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: java-microservice
